tests/integration/snapshots/integration__conformance__n_structure_double_array.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[][]
stdout ---

stderr ---
error: unexpected token `[` after json finished
 --> stdin:1:3
  |
1 | [][]
  |   ^
  |
help: consider removing the trailing content (starting with `[`)
  |
1 - [][]
1 + []
  |
