tests/integration/snapshots/integration__conformance__n_structure_incomplete_utf8_bom.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [239, 187, 123, 125]
stdout ---

stderr ---
error: expected a continuation byte, found 0x7B
 --> stdin:1:1
  |
1 | �{}
  | ^
