tests/integration/snapshots/integration__conformance__n_structure_incomplete_utf8_bom.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [239, 187, 123, 125]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
