tests/integration/snapshots/integration__conformance__n_structure_lone-invalid-utf-8.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
raw bytes: [229]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
