tests/integration/snapshots/integration__conformance__n_structure_no_data.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---

stdout ---

stderr ---
error: expected non empty input from stdin
  |
help: pipe data to stdin like so
      $ echo -en "{\"hello I am valid\": null} " | jjp check
